--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 appdirs==1.4.4
-asgiref==3.3.1       
+asgiref==3.3.1
 beautifulsoup4==4.9.3
+boto3==1.17.73
+botocore==1.20.73
 bson==0.5.10
 cachelib==0.1.1
 certifi==2020.12.5
@@ -8,8 +10,11 @@ chardet==4.0.0
 click==7.1.2
 cycler==0.10.0
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.7
 django-crispy-forms==1.11.2
+django-heroku==0.3.1
+django-storages==1.11.1
 djangorestframework==3.12.4
 filelock==3.0.12
 Flask==1.1.2
@@ -19,6 +24,7 @@ gunicorn==20.1.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
+jmespath==0.10.0
 joblib==1.0.1
 kiwisolver==1.3.1
 lxml==4.6.3
@@ -35,6 +41,7 @@ pytesseract==0.3.7
 python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
+s3transfer==0.4.2
 scikit-learn==0.24.1
 scipy==1.6.2
 six==1.15.0
@@ -46,3 +53,4 @@ threadpoolctl==2.1.0
 urllib3==1.26.4
 virtualenv==20.4.2
 Werkzeug==1.0.1
+whitenoise==5.2.0
