--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 appdirs==1.4.4
 asgiref==3.3.1
 beautifulsoup4==4.9.3
-boto3==1.17.73
-botocore==1.20.73
+boto3==1.17.74
+botocore==1.20.74
 bson==0.5.10
 cachelib==0.1.1
 certifi==2020.12.5
@@ -19,8 +19,9 @@ djangorestframework==3.12.4
 filelock==3.0.12
 Flask==1.1.2
 Flask-Session==0.3.2
+Flask-SQLAlchemy==2.5.1
 greenlet==1.1.0
-gunicorn==20.1.0
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -30,11 +31,14 @@ kiwisolver==1.3.1
 lxml==4.6.3
 MarkupSafe==1.1.1
 matplotlib==3.4.1
+neat-python==0.92
 numpy==1.20.1
 opencv-python==4.5.1.48
 pandas==1.2.3
 Pillow==8.1.2
+pipenv==2020.11.15
 psycopg2==2.8.6
+pygame==2.0.1
 pymongo==3.11.3
 pyparsing==2.4.7
 pytesseract==0.3.7
@@ -52,5 +56,6 @@ sqlparse==0.4.1
 threadpoolctl==2.1.0
 urllib3==1.26.4
 virtualenv==20.4.2
+virtualenv-clone==0.5.4
 Werkzeug==1.0.1
 whitenoise==5.2.0
